2010-08-31  Gary V. Vaughan  <gary@gnu.org>

	build: compare `revision' rather than `correctver' in Makefile.am.
	* Makefile.am (rebuild): Set the shell variable `revision' rather
	than `correctver' for clarity of purpose.
	(bootstrap_edit, libltdl/config/ltmain.sh): Adjust.
	(libltdl/m4/ltversion.m4): Likewise, and alse, instead of munging
	the serial number comment line with set, extract `macro_version'
	from this file, and compare it directly with `revision'.
	(libtool): Likewise for `package_revision'.

2010-10-20  Gary V. Vaughan  <gary@gnu.org>

	build: avoid spurious bootstrap_edit call.
	* Makefile.am (tests/package.m4): @FOO@ substitutions have already
	been made by the time Makefile.am has been transformed into Makefile,
	so don't try to rerun the substitutions manually with
	$(bootstrap_edit) after the fact.

2011-10-17  Gary V. Vaughan  <gary@gnu.org>

	Post-release administrivia.
	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version
	numbers.
	* NEWS: Add header line for next release.

	Release 2.4.2.
	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version
	numbers.
	* NEWS: Update version number.

	Replace leading spaces with tabs.
	* libltdl/m4/libtool.m4, libltdl/config/ltmain.m4sh: Replace leading
	spaces in soure code with tabs to match surrounding code.
	Reported by Peter Rosin.

	Make a note to use gnu/linux for version_type.
	* libltdl/m4/libtool.m4 (version_type): Add a comment to change
	version_type setting from 'linux' to 'gnu/linux' during the next
	destabilising code refactoring.
	* libltdl/config/ltmain.m4sh: ditto.
	Requested by Richard Stallman.

2011-10-04  Bart Van Assche <bvanassche@acm.org>

	Typo fix - change func_apped into func_append
	* libltdl/config/ltmain.m4sh: Fix typo.

2011-10-02  Xin LI <d@delphij.net>

	Avoid problems when FreeBSD goes to version 10.
	* libltdl/m4/libtool.m4: Remove mentions of freebsd1. Use dots
	for FreeBSD 2 and 3 detection to avoid future problems
	* libltdl/m4/ltmain.m4sh: ditto.
